# FinMateUz

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_telegram_user_id_bigint.py
apps/api/app/: deps.py  enums.py  main.py
apps/api/app/api/routes/: __init__.py  audit.py  auth.py  bot.py  categories.py  companies.py  reports.py  transactions.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: __init__.py  common.py  entities.py
apps/api/app/services/: audit.py  auth.py  categories.py  companies.py  permissions.py  reports.py  transactions.py
apps/api/app/tests/: conftest.py  test_transactions_and_reports.py
apps/bot/: Dockerfile  pyproject.toml
apps/bot/bot/: api_client.py  config.py  conversation.py  main.py  parser.py  transcriber.py
apps/bot/bot/handlers/: __init__.py  messages.py
apps/bot/bot/keyboards/: __init__.py  common.py
apps/bot/bot/parsers/: __init__.py  amounts.py  categories.py  dates.py  intents.py  models.py  text.py  transactions.py
apps/bot/bot/services/: backend.py  conversation.py  factory.py  transcribers.py
apps/bot/bot/states/: __init__.py  conversation.py
apps/bot/bot/tests/: test_conversation.py  test_parser.py
docs/: API.md  ARCHITECTURE.md  BOT_FLOWS.md  DEPLOYMENT.md  SECURITY.md  (+1 more)
(+41 files in other folders)
