[project]
name = "finmate-uz-api"
version = "0.1.0"
description = "FastAPI backend for FinMate UZ"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
