[project]
name = "finmate-uz-bot"
version = "0.1.0"
description = "Telegram bot for FinMate UZ"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.1",
  "httpx>=0.27.2",
  "pydantic-settings>=2.4.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["bot/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
